argocd/k8s/n8n/database/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: n8n
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
