argocd/k8s/n8n/database/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: postgres-network-policy
  namespace: n8n
spec:
  endpointSelector:
    matchLabels:
      app: postgres
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: n8n
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
  egress:
    - {}
